# Binypt-lib

./: .flake8  .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
binypt/: __init__.py  binypt.py  progress_bar.py  progress_bar_wrapper.py  retriever.py
binypt-lib/: binypt_lib.py  metadata.json
binypt/metadata/: __init__.py  _metadata.py  _parser.py  _validator.py  client.py  metadata.json  parser.py
src/binypt/: binypt.py
tests/: test_lib.py  test_logging.py  test_main.py  test_progress.py  test_progress_bar.py
