[tool.poetry]
name = "binypt-lib"
version = "0.1.0"
description = "Library to download data charts from Binance"
authors = ["tejaromalius <tayefi.ilia@protonmail.com>"]
license = "MIT"
packages = [{include = "src/binypt" }, {include = "resources" }]
readme = "README.md"
repository = "https://github.com/Tejaromalius/Binypt-lib"
keywords = ["crypto", "binance"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
progress = "^1.6"
requests = "^2.31.0"
datetime = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.1"

[tool.pytest.ini_options]
pythonpath = ["src/binypt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
