[tool.poetry]
name = "binypt-lib"
version = "1.2.0"
description = "Library to download data charts from Binance"
authors = ["tejaromalius <tayefi.ilia@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tejaromalius/Binypt-lib"
include = ["LICENSE"]
packages = [{include = "binypt"}]
keywords = ["crypto", "binance"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "3.10.x"
numpy = "^1.25.2"
pandas = "^2.1.0"
progress = "^1.6"
requests = "^2.31.0"
datetime = "^5.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
style-doc = "^0.2.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.isort]
profile="black"
no_sections = "True"
length_sort = "True"
float_to_top = "True"
order_by_type = "True"
lines_between_types = "1"
force_single_line = "True"
combine_straight_imports = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
