[tool.poetry]
name = "binypt-lib"
version = "2.1.0"
description = "Library to download data charts from Binance"
authors = ["ilia tayefi <tayefi.ilia@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tejaromalius/Binypt-lib"
include = ["LICENSE", "DOCUMENTATION.md"]
packages = [{include = "binypt"}]
keywords = ["crypto", "binance"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "3.10.x"
numpy = "^1.25.2"
pandas = "^2.1.0"
progress = "^1.6"
requests = "^2.31.0"
datetime = "^5.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q -Wignore"

[tool.isort]
profile="black"
line_length = "79"
no_sections = "True"
length_sort = "True"
float_to_top = "True"
order_by_type = "True"
lines_between_types = "1"
force_single_line = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
